[package]
name = "liblcm-sys"
version = "1.3.0"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "FFI bindings for liblcm."
license = "MIT"
homepage = "https://github.com/zberkowitz/liblcm-sys"
repository = "https://github.com/zberkowitz/liblcm-sys.git"
keywords = ["lcm", "marshalling", "bindings", "ffi", "messaging"]

build = "build.rs"
links = "lcm"

publish = false

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.2"
